gobmkida/c2/is_self_atari
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/is_self_atari/src/engine/board.c:2812:25: error: use of undeclared identifier 'byte_9B389F'
v11 = ( unsigned __int8)byte_9B389F[v3]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/is_self_atari/src/engine/board.c:2813:6: error: use of undeclared identifier 'byte_9B389F'
if ( byte_9B389F[v3] ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/is_self_atari/src/engine/board.c:2834:25: error: use of undeclared identifier 'byte_9B388C'
v12 = ( unsigned __int8)byte_9B388C[v3]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/is_self_atari/src/engine/board.c:2835:6: error: use of undeclared identifier 'byte_9B388C'
if ( byte_9B388C[v3] ) 
     ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/is_self_atari/src/obj/1/board.o] Error 1
